k8s/backend-deployment.yml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: trading             
  labels:
    app: backend
    version: "1.0"

spec:
  
  replicas: 2

  selector:
    matchLabels:
      app: backend

 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
        
          image: fullstackstocktradingplatform-backend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          
          resources:
            requests:
              memory: "128Mi"     
              cpu: "100m"         
            limits:
              memory: "512Mi"     
              cpu: "500m"         

          
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15    
            periodSeconds: 20          

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: trading
spec:
  selector:
    app: backend                  
  ports:
    - protocol: TCP
      port: 5000                  
      targetPort: 5000            
  type: ClusterIP
